Update to java 15 (#125)